--- a/models/15_skorpekh_destroyers/album.html
+++ b/models/15_skorpekh_destroyers/album.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2017.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<title>Space Marine Intercessors</title>
+		<title>Skorpekh Destroyers and Canoptek Plasmacyte</title>
 		<style>
 			.back {
 				position: absolute;
@@ -22,8 +22,8 @@
 			<a href="../../index.html" class="w3-padding back">
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
-			<h1>Space Marine Intercessors</h1>
-			<p>Intercessors from the Know No Fear box, the first box I received. Also the first time I used transfers on miniatures.</p>
+			<h1>Skorpekh Destroyers and Canoptek Plasmacyte</h1>
+			<p>Very happy with the simple high-contrast colour scheme. Especially proud of the weathered white panels and the glaze on the blades.</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -43,7 +43,7 @@
 		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
 			<h1>Paints Used:</h1>
 			<ul>
-				<li><b>Blue Armour:</b><i> Macragge Blue, Nuln Oil in recesses, edge highlight Calgar Blue, Fenrisian Grey on the sharpest points</i></li>				<li><b>Red Helmet:</b><i> Khorne Red, Nuln Oil in recesses, edge highlight Evil Sunz Scarlet and Wild Rider Red</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Gold:</b><i> Retributor Armour, Reikland Fleshshade all over, highlight Liberator Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Purity Seal Wax:</b><i> Screamer Pink, Carroburg Crimson all over, highlight Pink Horror</i></li>				<li><b>Purity Seal Paper:</b><i> Rakarth Flesh, Seraphim Sepia all over, highlight Pallid Wych Flesh, Dryad Bark text</i></li>				<li><b>Skin:</b><i> Rakarth Flesh, Reikland Fleshshade all over, highlight Flayed One Flesh and Pallid Wych Flesh</i></li>				<li><b>Eyes:</b><i> Vallejo White, Abaddon Black</i></li>				<li><b>Hair:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Mouth:</b><i> Screamer Pink tongue, glaze Screamer Pink over lips</i></li>				<li><b>Armour Eye Lenses:</b><i> Mephiston Red</i></li>				<li><b>Base:</b><i> Astrogranite, Nuln Oil all over, drybrush Screaming Skull, Steel Legion Drab rim</i></li>
+				<li><b>Steel:</b><i> Chaos Black primer, fill in missed spots with Abaddon Black, heavy drybrush Leadbelcher, light drybrush Stormhost Silver</i></li>				<li><b>White Panels:</b><i> Celestra Grey, Nuln Oil all over, Ulthuan Grey around damage, edge highlight Vallejo White, Leadbelcher on a sponge brush for damage, selective Ardcoat for glossy spots</i></li>				<li><b>Blades:</b><i> Vallejo White, Hexwraith Flame, Glaze Vallejo White over half, Vallejo White on edge, Ardcoat</i></li>				<li><b>Lenses/Orbs:</b><i> Vallejo White, one or two coats of Hexwraith Flame, including over nearby metal, Ardcoat</i></li>				<li><b>Green Details:</b><i> Vallejo White, one or two coats of Hexwraith Flame, including over nearby metal</i></li>				<li><b>Base Rocks:</b><i> Mechanicus Standard Grey, Nuln Oil all over, highlight Dawnstone</i></li>				<li><b>Base Metal:</b><i> Leadbelcher, Nuln Oil all over, highlight Stormhost Silver</i></li>				<li><b>Base:</b><i> Vallejo Brown Earth Texture, Agrax Earthshade all over, drybrush Screaming Skull, Gamers Grass Dry Tufts and TinyTufts Beige, Steel Legion Drab rim</i></li>
 			</ul>
 		</div>
 
