--- a/models/19_myrmourn_banshees/album.html
+++ b/models/19_myrmourn_banshees/album.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2017.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<title>Space Marine Intercessors</title>
+		<title>Glaivewraith Stalkers</title>
 		<style>
 			.back {
 				position: absolute;
@@ -22,8 +22,8 @@
 			<a href="../../index.html" class="w3-padding back">
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
-			<h1>Space Marine Intercessors</h1>
-			<p>Intercessors from the Know No Fear box, the first box I received. Also the first time I used transfers on miniatures.</p>
+			<h1>Glaivewraith Stalkers</h1>
+			<p>Bought the Storm Strike starter set for the Stormcast, but ended up painting these first because they were easy and fun.</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -33,17 +33,19 @@
 			</div>
 			<div class="w3-third">
 				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
+				<img src="2_2.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
 				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
+				<img src="3_2.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 		</div>
 		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
 			<h1>Paints Used:</h1>
 			<ul>
-				<li><b>Blue Armour:</b><i> Macragge Blue, Nuln Oil in recesses, edge highlight Calgar Blue, Fenrisian Grey on the sharpest points</i></li>				<li><b>Red Helmet:</b><i> Khorne Red, Nuln Oil in recesses, edge highlight Evil Sunz Scarlet and Wild Rider Red</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Gold:</b><i> Retributor Armour, Reikland Fleshshade all over, highlight Liberator Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Purity Seal Wax:</b><i> Screamer Pink, Carroburg Crimson all over, highlight Pink Horror</i></li>				<li><b>Purity Seal Paper:</b><i> Rakarth Flesh, Seraphim Sepia all over, highlight Pallid Wych Flesh, Dryad Bark text</i></li>				<li><b>Skin:</b><i> Rakarth Flesh, Reikland Fleshshade all over, highlight Flayed One Flesh and Pallid Wych Flesh</i></li>				<li><b>Eyes:</b><i> Vallejo White, Abaddon Black</i></li>				<li><b>Hair:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Mouth:</b><i> Screamer Pink tongue, glaze Screamer Pink over lips</i></li>				<li><b>Armour Eye Lenses:</b><i> Mephiston Red</i></li>				<li><b>Base:</b><i> Astrogranite, Nuln Oil all over, drybrush Screaming Skull, Steel Legion Drab rim</i></li>
+				<li><b>Cloak:</b><i> Vallejo White, Nihilakh Oxide, drybrush Vallejo White to blend</i></li>				<li><b>Body:</b><i> Balthasar Gold, Nihilakh Oxide all over, highlight Balthasar Gold</i></li>				<li><b>Bone:</b><i> Zandri Dust, Seraphim Sepia all over, highlight Ushabti Bone and Screaming Skull</i></li>				<li><b>Wood:</b><i> Dryad Bark, Agrax Earthshade all over, highlight Gorthor Brown</i></li>				<li><b>Rusty Metal:</b><i> Leadbelcher, Reikland Fleshshade all over, edge highlight Stormhost Silver</i></li>				<li><b>Bird:</b><i> Abaddon Black, drybrush Eshin Grey and Dawnstone</i></li>				<li><b>Base Leaves:</b><i> Waaagh Flesh, Biel-tan Green all over, highlight Warboss Green and Skarsnik Green</i></li>				<li><b>Base Roses:</b><i> Mephiston Red, Carroburg Crimson all over, highlight Evil Sunz Scarlet</i></li>				<li><b>Base Gravel:</b><i> Mechanicus Standard Grey, Agrax Earthshade all over</i></li>				<li><b>Base Flagstones:</b><i> Mechanicus Standard Grey, Nuln Oil all over, edge highlight Dawnstone, Mechanicus Standard Grey rim</i></li>
 			</ul>
 		</div>
 
