--- a/models/20_hexmark_destroyer/album.html
+++ b/models/20_hexmark_destroyer/album.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2017.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<title>Necron Warriors and Canoptek Scarab Swarms</title>
+		<title>Hexmark Destroyer</title>
 		<style>
 			.back {
 				position: absolute;
@@ -22,18 +22,16 @@
 			<a href="../../index.html" class="w3-padding back">
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
-			<h1>Necron Warriors and Canoptek Scarab Swarms</h1>
-			<p>Extra grimdark Necron Warriors from a big starter set. Lots of fun drybrushing and technical paint.</p>
+			<h1>Hexmark Destroyer</h1>
+			<p>Really liked this model, used getting up to 500 points as a mild excuse to buy it for myself. Just looks really cool with all the eyes and pistols.</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
 				<img src="1_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
-				<img src="1_2.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
 				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
-				<img src="2_2.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
@@ -44,7 +42,7 @@
 		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
 			<h1>Paints Used:</h1>
 			<ul>
-				<li><b>Steel:</b><i> Chaos Black primer, fill in missed spots with Abaddon Black, heavy drybrush Leadbelcher, light drybrush Stormhost Silver</i></li>				<li><b>Lenses/Orbs:</b><i> Vallejo White, one or two coats of Hexwraith Flame, including over nearby metal, Ardcoat</i></li>				<li><b>Green Details:</b><i> Vallejo White, one or two coats of Hexwraith Flame, including over nearby metal</i></li>				<li><b>Base Rocks:</b><i> Mechanicus Standard Grey, Nuln Oil all over, highlight Dawnstone</i></li>				<li><b>Base:</b><i> Vallejo Brown Earth Texture, Agrax Earthshade all over, drybrush Screaming Skull, Gamers Grass Dry Tufts and TinyTufts Beige, Steel Legion Drab rim</i></li>
+				<li><b>Steel:</b><i> Chaos Black primer, fill in missed spots with Abaddon Black, heavy drybrush Leadbelcher, light drybrush Stormhost Silver</i></li>				<li><b>White Panels:</b><i> Celestra Grey, Nuln Oil all over, Ulthuan Grey around damage, edge highlight Vallejo White, Leadbelcher on a sponge brush for damage, selective Ardcoat for glossy spots</i></li>				<li><b>Lenses/Orbs:</b><i> Vallejo White, one or two coats of Hexwraith Flame, including over nearby metal, Ardcoat</i></li>				<li><b>Green Details:</b><i> Vallejo White, one or two coats of Hexwraith Flame, including over nearby metal</i></li>				<li><b>Base Rocks:</b><i> Mechanicus Standard Grey, Nuln Oil all over, highlight Dawnstone</i></li>				<li><b>Base Metal:</b><i> Leadbelcher, Nuln Oil all over, highlight Stormhost Silver</i></li>				<li><b>Base:</b><i> Vallejo Brown Earth Texture, Agrax Earthshade all over, drybrush Screaming Skull, Gamers Grass Dry Tufts and TinyTufts Beige, Steel Legion Drab rim</i></li>
 			</ul>
 		</div>
 
