--- a/models/19_myrmourn_banshees/album.html
+++ b/models/19_myrmourn_banshees/album.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2017.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<title>Glaivewraith Stalkers</title>
+		<title>Myrmourn Banshees</title>
 		<style>
 			.back {
 				position: absolute;
@@ -22,8 +22,8 @@
 			<a href="../../index.html" class="w3-padding back">
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
-			<h1>Glaivewraith Stalkers</h1>
-			<p>Bought the Storm Strike starter set for the Stormcast, but ended up painting these first because they were easy and fun.</p>
+			<h1>Myrmourn Banshees</h1>
+			<p>These were a little harder than the Glaivewraith Stalkers because of all the white, but overall pretty fun with nice bases.</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
