--- a/models/10_skeleton_warriors/album.html
+++ b/models/10_skeleton_warriors/album.html
@@ -43,7 +43,7 @@
 		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
 			<h1>Paints Used:</h1>
 			<ul>
-				<li><b>Bone:</b><i> Zandri Dust, Seraphim Sepia all over, drybrush Ushabti Bone and Screaming Skull</i></li>				<li><b>Metal:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Wood/Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Fabric:</b><i> Mephiston Red, Carroburg Crimson all over, highlight Mephiston Red</i></li>				<li><b>Horn:</b><i> Retributor Armour, Reikland Fleshshade, highlight Liberator Gold</i></li>				<li><b>Base:</b><i> Vallejo Brown Earth, Agrax Earthshade, drybrush Screaming Skull, Steel Legion Drab rim, Gamers Grass TinyTufts Beige</i></li>
+				<li><b>Bone:</b><i> Zandri Dust, Seraphim Sepia all over, drybrush Ushabti Bone and Screaming Skull</i></li>				<li><b>Metal:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Wood/Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Fabric:</b><i> Mephiston Red, Carroburg Crimson all over, highlight Mephiston Red</i></li>				<li><b>Horn:</b><i> Retributor Armour, Reikland Fleshshade, highlight Liberator Gold</i></li>				<li><b>Helmet Gem:</b><i> Vallejo White, Druchii Violet all over, Ardcoat</i></li>				<li><b>Base:</b><i> Vallejo Brown Earth, Agrax Earthshade, drybrush Screaming Skull, Steel Legion Drab rim, Gamers Grass TinyTufts Beige</i></li>
 			</ul>
 		</div>
 
